updates readme and makefile

--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
 <body>
 <h1 id="xg">xg</h1>
 <h2 id="succinct-labeled-graphs-with-collections-and-paths"><em>succinct labeled graphs with collections and paths</em></h2>
-<p><a href="https://travis-ci.org/ekg/xg"><img src="https://travis-ci.org/ekg/xg.svg" alt="Build Status" /></a></p>
+<p><a href="https://travis-ci.org/vgteam/xg"><img src="https://travis-ci.org/vgteam/xg.svg" alt="Build Status" /></a></p>
 <h2 id="what">what?</h2>
 <p>This library provides an interface to the construction and query of succinct/compressed labeled graphs, labeled collections of nodes and edges, and paths through the graph. The primary motivation is to index <a href="https://github.com/ekg/vg#vg">variation graphs</a> of the type produced by <a href="https://github.com/ekg/vg"><code>vg</code></a>, but in principle the library could be used for any labeled, directed graph.</p>
 <p>Graphs indexed with <code>xg</code> can be loaded and queried using variety of high-performance interfaces backed by efficient, succinct data structures from <a href="https://github.com/simongog/sdsl-lite">sdsl-lite</a>.</p>
